--- a/API/base/static/style.css
+++ b/API/base/static/style.css
@@ -2,6 +2,7 @@ html,
 body {
   background-color: #333;
   color: rgba(255, 255, 255, .5);
+  width: 1000px;
 }
 
 body {
@@ -21,6 +22,7 @@ body {
  */
 .masthead {
   margin-bottom: 2rem;
+
 }
 
 .masthead-brand {
@@ -68,4 +70,7 @@ body {
 .cover .btn-lg {
   padding: .75rem 1.25rem;
   font-weight: 700;
+}
+.flex-column{
+  width: 1000px;
 }
