--- a/API/base/templates/donate.html
+++ b/API/base/templates/donate.html
@@ -32,6 +32,10 @@
 </div>
 	</template>
 
+<form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search Blood" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search Blood</button>
+    </form>
 <div id="myContainer">
 
 </div>
