--- a/API/base/templates/base.html
+++ b/API/base/templates/base.html
@@ -4,7 +4,12 @@
 <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.css' %}">
 
 <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
- <div class=" d-flex w-100 h-100 p-3 mx-auto flex-column" style="width: 1000px">
+<style>
+   html,body{
+        width: 100%;
+    }
+</style>
+ <div class=" d-flex w-100 h-100 p-3 mx-auto flex-column">
   <header class="masthead mb-auto">
     <div class="inner">
       <h3 class="masthead-brand">Great Bear Technologies</h3>
