--- a/API/base/templates/profile.html
+++ b/API/base/templates/profile.html
@@ -3,7 +3,10 @@
 {% block body %}
 
 <style type="text/css">
-  
+   html,body{
+        width: 100%;
+    }
+
   .card-body{
     width: 300px;
   }
