--- a/API/base/templates/search.html
+++ b/API/base/templates/search.html
@@ -2,6 +2,10 @@
 {% load static%}
 {% block body %}
 <style type="text/css">
+	html,body{
+        width: 100%;
+    }
+
 	body{
 		color: white;
 	}
@@ -9,7 +13,9 @@
 	margin:90px 20px 20px 20px;
 	float:left;
 	border: 1px solid white;
+
 }
+
 </style>
 <template id="doner_card">
 	<div class="card-me">
@@ -31,7 +37,6 @@
 
 </div>
 	</template>
-
 <form action="http://127.0.0.1:8000/search" id ="search" class="form-group col-md-6">
       <input name="search" class="form-control mr-sm-2" type="text" placeholder="Search Blood" >
       <button class="btn btn-primary" type="submit">Search Blood</button>
@@ -40,5 +45,5 @@
 
 </div>
 <script src="{% static 'index.js' %}"></script>
-<script src="{% static 'js_doner.js' %}"></script>
+<script src="{% static 'js_search.js' %}"></script>
 {% endblock %}
