Adding search filter for two field

--- a/API/base/templates/search.html
+++ b/API/base/templates/search.html
@@ -38,7 +38,8 @@
 </div>
 	</template>
 <form action="http://127.0.0.1:8000/search" id ="search" class="form-group col-md-6">
-      <input name="search" class="form-control mr-sm-2" type="text" placeholder="Search Blood" >
+      <input name="blood_group" class="form-control mr-sm-2" type="text" placeholder="Search Blood" >
+	  <input name="address" class="form-control mr-sm-2" type="text" placeholder="Search Address" >
       <button class="btn btn-primary" type="submit">Search Blood</button>
     </form>
 <div id="myContainer">
