--- a/API/base/templates/profile.html
+++ b/API/base/templates/profile.html
@@ -3,45 +3,92 @@
 {% block body %}
 
 <style type="text/css">
+	*{
+		margin: 0;
+		padding: 0;
+		box-sizing: border-box;
+	}
    html,body{
         width: 100%;
+	   font-family: Roboto;
+	   font-size: 16px;
     }
 
-  .card-body{
-    width: 300px;
-  }
-  .card-me{
-    width: 300px;
-  margin:90px 20px 20px 20px;
-  float:left;
-  border: 1px solid white;
-}
+/*  .card-body{*/
+/*    width: 300px;*/
+/*  }*/
+/*  .card-me{*/
+/*    width: 300px;*/
+/*  margin:90px 20px 20px 20px;*/
+/*  float:left;*/
+/*  border: 1px solid white;*/
+/*}*/
+	.box{
+		width: 60%;
+		display: inline-block;
+		margin: 50px 10%;
+		box-shadow: 0 27px 87px rgba(0,0,0,0.37);
+		border-radius: 25px;
+		background: #b1dfbb;
+	}
+	.box-img{
+		float: left;
+		width: 400px;
+		border-radius: 25px;
+	}
+	.box-text{
+		width:350px;
+		float: left;
+		padding-left: 25px;
+	}
 </style>
 <template id="personal_card">
-	<div class="card-me">
-  <img class="card-img-top personal-image" alt="..." width="200px" height="200px">
-  <div class="card-body">
-    <h5 id="personal-name" class="card-title personal-name"></h5>
-    <hr>
-  	<p id="personal-blood" class = "card-text personal-blood"></p>
-  	<hr>
-  	<p id="personal-age" class = "card-text personal-age"></p>
-  	<hr>
-  	<p id="personal-sex" class = "card-text personal-sex"></p>
-  	<hr>
-  	<p id="personal-ph" class = "card-text personal-ph"></p>
-  	<hr>
-  	<p id="personal-address" class = "card-text personal-address"></p>
+	<div class="wrapper">
+		<div class="box">
+		<div class="box-img">
+			<img class="personal-image" style="height: 390px;width: 400px; border-radius: 25px">
+		</div>
+		<div class="box-text">
+			<h1 class="personal-name"></h1>
+			<p id="personal-blood" class = "personal-blood"></p>
+  			<hr>
+  			<p id="personal-age" class = "personal-age"></p>
+  			<hr>
+  			<p id="personal-sex" class = "personal-sex"></p>
+  			<hr>
+  			<p id="personal-ph" class = "personal-ph"></p>
+  			<hr>
+  			<p id="personal-address" class = "personal-address"></p>
+<a class="btn btn-primary" href="/update" role="button">Update Data</a>
+		</div>
+	</div>
+		</div>
+</template>
+<!--<template id="personal_card">-->
+<!--	<div class="card-me">-->
+<!--  <img class="card-img-top personal-image" alt="..." width="200px" height="200px">-->
+<!--  <div class="card-body">-->
+<!--    <h5 id="personal-name" class="card-title personal-name"></h5>-->
+<!--    <hr>-->
+<!--  	<p id="personal-blood" class = "card-text personal-blood"></p>-->
+<!--  	<hr>-->
+<!--  	<p id="personal-age" class = "card-text personal-age"></p>-->
+<!--  	<hr>-->
+<!--  	<p id="personal-sex" class = "card-text personal-sex"></p>-->
+<!--  	<hr>-->
+<!--  	<p id="personal-ph" class = "card-text personal-ph"></p>-->
+<!--  	<hr>-->
+<!--  	<p id="personal-address" class = "card-text personal-address"></p>-->
 
-  </div>
+<!--  </div>-->
 
-</div>
-	</template>
+<!--</div>-->
+<!--	</template>-->
 
 <div id="personal">
 
 </div>
-<a class="btn btn-primary" href="/update" role="button">Update Data</a>
+
 
 <script src="{% static 'index.js' %}"></script>
 <script src="{% static 'js_profile.js' %}"></script>
