--- a/API/base/templates/layout.html
+++ b/API/base/templates/layout.html
@@ -15,12 +15,6 @@ body {
   color: rgba(255, 255, 255, .5);
 }
 
-body {
-  display: -ms-flexbox;
-  display: flex;
-  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
-  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
-}
 
 .cover-container {
   max-width: 42em;
@@ -82,7 +76,8 @@ body {
 }
 </style>
 
- <div class=" d-flex w-100 h-100 p-3 mx-auto flex-column">
+ <div class=" d-flex h-100 mx-auto p-3 w-100 flex-column">
+     <div class="container">
   <header class="masthead mb-auto">
     <div class="inner">
       <h3 class="masthead-brand">Great Bear Technologies</h3>
@@ -101,5 +96,6 @@ body {
       </nav>
     </div>
   </header>
-  	
-  {% block body %}{% endblock %}
+         </div>
+
+    {% block body %}{% endblock %}
