--- a/API/base/templates/signup.html
+++ b/API/base/templates/signup.html
@@ -2,22 +2,6 @@
 {% load static %}
 {% block body %}
 <style type="text/css">
-	body {font-family: Arial, Helvetica, sans-serif;}
-* {box-sizing: border-box}
-
-/* Full-width input fields */
-input[type=text], input[type=password] {
-  width: 100%;
-  padding: 15px;
-  margin: 5px 0 22px 0;
-  display: inline-block;
-  border: none;
-  background: #f1f1f1;
-}
-
-input[type=text]:focus, input[type=password]:focus {
-  background-color: #ddd;
-  outline: none;
 }
 
 hr {
@@ -46,10 +30,6 @@ button:hover {
   width: 50%;
 }
 
-/* Add padding to container elements */
-.container {
-  padding: 16px;
-}
 
 /* Clear floats */
 .clearfix::after {
@@ -57,10 +37,22 @@ button:hover {
   clear: both;
   display: table;
 }
+.signup-form{
+    border: 2px solid #484847;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px 0 #1c1a1a, 0 6px 20px 0 #090808;
+    background: #1b3040;
+    width: 500px;
+}
+.backed{
+		background: url("../static/back1.jpg");
+        background-size: cover;
 
+	}
 </style>
-<div class="cover-container">
-<form id="signUpForm" action="http://127.0.0.1:8000/rest/project/signup/" style="border:1px solid #ccc" method='POST'>
+<section class="backed">
+<div class="container signup-form">
+<form id="signUpForm" action="http://127.0.0.1:8000/rest/project/signup/" method='POST'>
 	<div class="cover-container">
     <h1>Sign Up</h1>
     <p>Please fill in this form to create an account.</p>
@@ -141,7 +133,7 @@ button:hover {
   </div>
 </form>
 </div>
-
+</section>
    {{message}}
 <script src="{% static 'index.js' %}"></script>
 <script src="{% static 'js_signup.js' %}"></script>
