Adding manytomany field attribute to api response

--- a/API/base/templates/donate.html
+++ b/API/base/templates/donate.html
@@ -9,7 +9,7 @@
 		margin:90px 20px 20px 20px;
 		float:left;
 		border: 1px solid white;
-		height: 550px;
+		height: 650px;
 		width:250px;
 		border: 2px solid #484847;
     	border-radius: 5px;
@@ -38,7 +38,8 @@
   	<p id="doner-ph" class = "card-text doner-ph"></p>
   	<hr>
   	<p id="doner-address" class = "card-text doner-address"></p>
-
+	  <hr>
+	  <p id="doner-disease" class="card-text doner-disease"></p>
   </div>
 
 </div>
